--- a/todo_crud.frontent/src/App.css
+++ b/todo_crud.frontent/src/App.css
@@ -14,14 +14,15 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #17243f;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  text-align: center;
+  margin-bottom: 1%;
 }
 
 .App-link {
